	PR c++/33844 	* cxx-pretty-print.c (pp_cxx_pm_expression) <case MEMBER_REF>: Print 	->* rather than .*. 	* error.c (dump_expr): Handle MEMBER_REF and DOTSTAR_EXPR.

* g++.dg/other/ptrmem8.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129682 138bc75d-0d04-0410-961f-82ee72b054a4